# precursor-gen

./: Cargo.toml  flake.nix  notes.txt  precursor_script.yaml
src/: main.rs
