[package]
name = "precursor-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
clap = { version = "4.4.6", features = [ "derive" ] }
color-eyre = "0.6.2"
serde_yaml = "0.9.25"
serde = { version = "1.0", features = [ "derive" ] }
